# VKR

./: CMakeLists.txt  CSV.csv  Classes.h  Example.csv  Example1.csv  Example2.csv  File.csv  Functions.cpp  JSON.json  RandomShape.csv  Randomization.cpp  Sphere.csv  VKR.cpp  VKR.vcxproj  VKR.vcxproj.filters  WriteInFile.cpp  api.cpp  api.h  figures.cpp  figures.h  main.cpp  writefile.cpp  writefile.h  Генератор облаков точек.pptx
API_DLL/: ALL_BUILD.vcxproj  API.sln  API.vcxproj  CMakeCache.txt  Static_lib.vcxproj  Static_lib.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  myAPI.vcxproj  myAPI.vcxproj.filters  random.vcxproj  random.vcxproj.filters  shapes.vcxproj  shapes.vcxproj.filters  writeinfile.vcxproj  writeinfile.vcxproj.filters
API_DLL/API.dir/Debug/: API.dll.recipe  API.ilk
API_DLL/API.dir/Debug/API.tlog/: API.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
API_DLL/Debug/: File.csv  Static_lib.lib  random.lib  shapes.lib  writeinfile.lib
API_DLL/Static_lib.dir/Debug/Static_lib.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
API_DLL/myAPI.dir/Debug/: myAPI.exe.recipe  myAPI.ilk
API_DLL/myAPI.dir/Debug/myAPI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  (+3 more)
build_main/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  API.sln  API.vcxproj  API.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
(+25 files in other folders)
